--- a/CookingCurator/packages.config
+++ b/CookingCurator/packages.config
@@ -58,6 +58,8 @@
   <package id="NETStandard.Library" version="1.6.1" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
+  <package id="PagedList" version="1.17.0.0" targetFramework="net461" />
+  <package id="PagedList.Mvc" version="4.5.0.0" targetFramework="net461" />
   <package id="Remotion.Linq" version="2.2.0" targetFramework="net461" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net461" />
   <package id="System.Buffers" version="4.4.0" targetFramework="net461" />
