--- a/CookingCurator/CookingCurator.csproj
+++ b/CookingCurator/CookingCurator.csproj
@@ -475,6 +475,7 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\Images\avocado.jpg" />
     <Content Include="Content\Images\CookingCuratorLogo.jpg" />
     <Content Include="Content\Images\down-arrow.png" />
     <Content Include="Content\Images\up-arrow.png" />
