--- a/CookingCurator/CookingCurator.csproj
+++ b/CookingCurator/CookingCurator.csproj
@@ -483,7 +483,10 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\Images\avocado.jpg" />
     <Content Include="Content\Images\CookingCuratorLogo.jpg" />
+    <Content Include="Content\Images\CookingCuratorLogoV2.jpg" />
     <Content Include="Content\Images\down-arrow.png" />
+    <Content Include="Content\Images\food-background.jpg" />
+    <Content Include="Content\Images\recipe-book.jpg" />
     <Content Include="Content\Images\up-arrow.png" />
     <Content Include="Content\MultiSelect\chosen-sprite.png" />
     <Content Include="Content\MultiSelect\chosen.min.css" />
